fixed gaps

--- a/src/styles/Explore.css
+++ b/src/styles/Explore.css
@@ -37,11 +37,6 @@
 
 }
 
-.header,
-.content,
-.skills-section {
-  margin-bottom: 40px;
-}
 
 
 @media (max-width: 1024px) {
@@ -59,9 +54,7 @@
     padding: 0 10px;
   }
 
-  .section {
-    margin-bottom: 20px;
-  }
+
 
   .projects-container {
     gap: 15px;
